wip: checkout action

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,6 +34,8 @@ jobs:
           distribution: 'temurin'
           java-version: '17' # todo: get this from the matrix
 
+      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+
       - name: mvn stuff
         run: |
           : build version strings
