--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,12 @@
       <version>${druid.version}</version>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>org.apache.druid</groupId>
+      <artifactId>druid-processing</artifactId>
+      <version>${druid.version}</version>
+      <scope>provided</scope>
+    </dependency>
   </dependencies>
 
   <build>
@@ -156,10 +162,8 @@
           <rules>
             <banDuplicatePomDependencyVersions />
             <banDynamicVersions />
-            <banDuplicatePomDependencyVersions />
-            <banDynamicVersions />
             <requireActiveProfile>
-              <profiles>druid-30.0.1,druid-31.0.1,druid-33.0.0</profiles>
+              <profiles>druid-30.0.1,druid-33.0.0,druid-34.0.0</profiles>
               <all>false</all>
             </requireActiveProfile>
             <requireJavaVersion>
@@ -333,44 +337,6 @@
           <version>2.12.7.1</version>
           <scope>provided</scope>
         </dependency>
-        <dependency>
-          <groupId>org.apache.druid</groupId>
-          <artifactId>druid-processing</artifactId>
-          <version>${druid.version}</version>
-          <scope>provided</scope>
-        </dependency>
-      </dependencies>
-    </profile>
-    <profile>
-      <!-- LTS version as of 25.3 -->
-      <id>druid-31.0.1</id>
-      <properties>
-        <java.version>17</java.version>
-        <druid.version>31.0.1</druid.version>
-        <guava.version>32.0.1-jre</guava.version>
-        <guice.version>4.1.0</guice.version>
-        <!--
-        jackson.version in 31.0.1 is actually specified as 2.12.7.20221012 but according to the release notes
-        https://github.com/FasterXML/jackson/wiki/Jackson-Release-2.12#micro-patches that is "only" the BOM which
-        specifies almost all dependencies to be 2.12.7 with the exception of jackson-databind which is at 2.12.7.1:
-        https://repo1.maven.org/maven2/com/fasterxml/jackson/jackson-bom/2.12.7.20221012/jackson-bom-2.12.7.20221012.pom
-        so we override that here
-        -->
-        <jackson.version>2.12.7</jackson.version>
-      </properties>
-      <dependencies>
-        <dependency>
-          <groupId>com.fasterxml.jackson.core</groupId>
-          <artifactId>jackson-databind</artifactId>
-          <version>2.12.7.1</version>
-          <scope>provided</scope>
-        </dependency>
-        <dependency>
-          <groupId>org.apache.druid</groupId>
-          <artifactId>druid-processing</artifactId>
-          <version>${druid.version}</version>
-          <scope>provided</scope>
-        </dependency>
       </dependencies>
     </profile>
     <profile>
@@ -396,13 +362,44 @@
           <version>2.12.7.1</version>
           <scope>provided</scope>
         </dependency>
+      </dependencies>
+    </profile>
+    <profile>
+      <id>druid-34.0.0</id>
+      <properties>
+        <java.version>17</java.version>
+        <druid.version>34.0.0</druid.version>
+        <guava.version>32.1.3-jre</guava.version>
+        <guice.version>5.1.0</guice.version>
+        <jackson.version>2.18.4</jackson.version>
+      </properties>
+      <dependencies>
+        <!--
+        In druid-server 34.0.0 all the jackson dependencies are specified to be 2.18.4 with the exception of jackson-core which is at 2.18.4.1:
+        https://github.com/apache/druid/blob/druid-34.0.0/pom.xml#L103, so we override that here
+        -->
         <dependency>
-          <groupId>org.apache.druid</groupId>
-          <artifactId>druid-processing</artifactId>
-          <version>${druid.version}</version>
+          <groupId>com.fasterxml.jackson.core</groupId>
+          <artifactId>jackson-core</artifactId>
+          <version>2.18.4.1</version>
           <scope>provided</scope>
         </dependency>
       </dependencies>
+      <!--
+        We need to override the guice version using <dependencyManagement> here, otherwise maven chooses the highest
+        possible version in the range given by https://github.com/FasterXML/jackson-modules-base/blob/jackson-modules-base-2.18.4/guice/pom.xml#L30
+        which for some reason also wins in the conflict resolution, resulting in another version of the dependency than druid uses
+      -->
+      <dependencyManagement>
+        <dependencies>
+          <dependency>
+            <groupId>com.google.inject</groupId>
+            <artifactId>guice</artifactId>
+            <version>${guice.version}</version>
+            <scope>provided</scope>
+          </dependency>
+        </dependencies>
+      </dependencyManagement>
     </profile>
   </profiles>
 
